src/objects/Org_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Applet_Jars_Location__c</fullName>
        <label>Applet Jars Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Biometric_DB_Connection__c</fullName>
        <label>Biometric DB Connection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Check_Teller_Balance_before_EOD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Teller Balance before EOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digits_After_Decimals__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Digits After Decimals</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disable_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this box is need to disable triggers in managed package.</inlineHelpText>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Griaule_Biometrics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Griaule Biometrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_M2SYS_Biometrics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable M2SYS Biometrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Teller_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Teller Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrate_Salesforce_CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integrate Salesforce CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Level__c</fullName>
        <defaultValue>&quot;NONE&quot;</defaultValue>
        <label>Log Level</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round_Factor__c</fullName>
        <defaultValue>0.01</defaultValue>
        <label>Round Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rounding_Mode__c</fullName>
        <defaultValue>&apos;NEAREST&apos;</defaultValue>
        <label>Rounding Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Account_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Account History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track_Client_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Client History</label>
        <type>Checkbox</type>
    </fields>
    <label>Org Parameters</label>
</CustomObject>